<resources>
    <string name="app_name">Blood Bank</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="loginButton">Login</string>
    <string name="register">Send Request</string>
    <string name="login">Login</string>
    <string name="s_registration">Registration</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email:</string>
    <string name="contact_no">Contact No:</string>
    <string name="address">Address:</string>
    <string name="authentication_details">Authentication Details:</string>
    <string name="user_name_store">User Name:</string>
    <string name="password_store">Password:</string>
    <string name="blood_group">Blood Group:</string>
    <string name="i_want_to_be_a_donor">I want to be a Donor</string>
    <string name="search_donor">Search Donor</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="my_details">My Details</string>
    <string name="my_name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="blood_group_type">Blood Group:</string>
    <string name="my_email">Email:</string>
    <string name="my_contact_no">Contact No:</string>
    <string name="my_address">Address:</string>
    <string name="city">City:</string>
    <string name="update">Update</string>
    <string name="registerme">Register</string>
    <string name="log_out">Log out</string>
    <string name="registered">Register</string>
    <string name="updated">Update</string>
    <string name="my_city">City</string>
    <string name="show">City</string>
    <string name="check_city">City</string>
    <string name="mm_city">City</string>
    <string name="to_see_update_effect_please_re_login">To See Update Effect Please Re-Login</string>
</resources>
