<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gamabubakar.bloodbankproject.Main2Activity"
    android:background="@color/Loginbackground">

    <TextView
        android:id="@+id/registration_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="05dp"
        android:text="@string/s_registration"
        android:textColor="@color/textcolor"
        android:textSize="32sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/textcolor"
        android:textColor="#ffffff"
        android:layout_below="@id/registration_id"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="text"/>
    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/username">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <RadioButton
                android:id="@+id/radiobutton_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                android:layout_marginRight="10dp" />
        <RadioButton
            android:id="@+id/radiobutton_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/textcolor"
            android:textSize="18sp"/>
        </RadioGroup>
    </LinearLayout>
    <EditText
        android:id="@+id/Email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/textcolor"
        android:textColor="#ffffff"
        android:layout_below="@id/linearlayout"
        android:layout_centerHorizontal="true"
        android:gravity="center" />
    <EditText
        android:id="@+id/contactNo"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/contact_no"
        android:textColorHint="@color/textcolor"
        android:textColor="#ffffff"
        android:layout_below="@id/Email"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="number"/>
    <EditText
        android:id="@+id/Address"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/check_city"
        android:textColorHint="@color/textcolor"
        android:textColor="#ffffff"
        android:layout_below="@id/contactNo"
        android:layout_centerHorizontal="true"
        android:gravity="center" />
    <TextView
        android:id="@+id/authentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authentication_details"
        android:layout_below="@id/Address"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#000000"/>
    <EditText
        android:id="@+id/usernamestored"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_store"
        android:textColorHint="@color/textcolor"
        android:textColor="#ffffff"
        android:layout_below="@id/authentication"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="text"/>
    <EditText
        android:id="@+id/passwordstored"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_store"
        android:textColorHint="@color/textcolor"
        android:textColor="#ffffff"
        android:layout_below="@id/usernamestored"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="textPassword"/>

   <LinearLayout
       android:id="@+id/linearlayout2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_below="@id/passwordstored"
       android:gravity="center">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/blood_group"
           android:textColor="#ffffff"
           android:textSize="25sp"/>

       <Spinner
           android:layout_width="150dp"
           android:layout_height="match_parent"
           android:id="@+id/spinner" />

   </LinearLayout>
    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout2"
        android:text="@string/i_want_to_be_a_donor"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="@color/donortext"/>
    <Button
        android:id="@+id/registerButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/registered"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_below="@id/checkbox1"
        android:layout_centerHorizontal="true"
        android:onClick="RegisterButton"/>

</RelativeLayout>
