<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gamabubakar.bloodbankproject.MainActivity"
    android:background="@color/Loginbackground">

    <TextView
        android:id="@+id/login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/login"
        android:textColor="@color/textcolor"
        android:textSize="52sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textColorHint="@color/textcolor"
        android:textColor="#ffffff"
        android:layout_below="@id/login_id"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="text"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/textcolor"
        android:textColor="#ffffff"
        android:layout_below="@id/username"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_below="@id/password"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:onClick="LoginButton"/>
    <Button
        android:id="@+id/registerButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/registerme"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="RegistrationButton"/>



</RelativeLayout>
